<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesCRUD">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/NoteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_name"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtNoteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_text"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txtPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_priority"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <Spinner
            android:id="@+id/edtPrioritySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_image"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <ImageView
            android:id="@+id/edtImage"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            />
        <Button
            android:id="@+id/btnImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_image"
            android:background="#32CD32"
            android:textColor="#ffffff"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="#32CD32"
            android:textColor="#ffffff"
            android:layout_marginBottom="5dp"
            />

    </LinearLayout>

</ScrollView>